fix: improved validation + queries in the repository